--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -533,7 +533,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Title"
+            tools:text="Title"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white_opycity_hundred_present"
             android:textSize="15sp"
@@ -545,7 +545,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:text="Title"
+            tools:text="Title"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white_opycity_swenty_present"
             android:textSize="13sp"
@@ -558,7 +558,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="5dp"
-            android:text="Title"
+            tools:text="Title"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white_opycity_swenty_present"
             android:textSize="13sp"
