--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -53,7 +53,7 @@
         android:layout_marginEnd="16dp"
         android:text="Title"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/white_opycity_hundred_present"
+        android:textColor="@color/white"
         android:textSize="15sp"
         android:visibility="gone" />
 
@@ -535,8 +535,8 @@
             android:layout_marginTop="5dp"
             tools:text="Title"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/white_opycity_hundred_present"
-            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             android:visibility="gone" />
 
 
@@ -548,7 +548,7 @@
             tools:text="Title"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white_opycity_swenty_present"
-            android:textSize="13sp"
+            android:textSize="10sp"
             android:visibility="gone" />
 
 
@@ -557,11 +557,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             tools:text="Title"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white_opycity_swenty_present"
-            android:textSize="13sp"
+            android:textSize="10sp"
             android:visibility="gone" />
 
 
