--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -228,8 +228,6 @@
         android:orientation="horizontal">
 
 
-
-
         <LinearLayout
             android:id="@+id/volumeLayout"
             android:layout_width="wrap_content"
@@ -247,24 +245,24 @@
                 android:id="@+id/epsodeButton"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:padding="5dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:visibility="gone"
                 android:background="@android:color/transparent"
-                android:src="@drawable/webseries" />
+                android:padding="5dp"
+                android:src="@drawable/webseries"
+                android:visibility="gone" />
 
 
             <ImageView
                 android:id="@+id/epsodeNextButton"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:padding="5dp"
                 android:layout_gravity="center"
-                android:visibility="gone"
                 android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/next_epsode" />
+                android:padding="5dp"
+                android:src="@drawable/next_epsode"
+                android:visibility="gone" />
 
 
             <ImageView
@@ -277,17 +275,15 @@
                 android:padding="5dp"
                 android:src="@drawable/ic_balaji_volume_on" />
 
-            <SeekBar
+            <com.github.rubensousa.previewseekbar.PreviewSeekBar
                 android:id="@+id/exo_volume_progress"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="160dp"
-                android:layout_height="10dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="16dp"
                 android:layout_marginRight="40dp"
                 android:layout_weight="1"
-                android:progressDrawable="@drawable/progress"
-                android:thumb="@drawable/thumb" />
+                app:previewThumbTint="@color/white" />
 
         </LinearLayout>
 
@@ -412,7 +408,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.multitv.ott.multitvvideoplayer.timebar.PreviewTimeBar
+            <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
                 android:id="@+id/exo_progress"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
