--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -391,12 +391,12 @@
             android:layout_width="160dp"
             android:layout_height="90dp"
             android:background="@drawable/video_frame"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:id="@+id/previewImageView"
-                android:layout_width="120dp"
-                android:layout_height="70dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="fitXY" />
 
         </FrameLayout>
