preview seekbar changes

--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -395,7 +395,7 @@
             android:visibility="gone">
 
             <ImageView
-                android:id="@+id/previewImageView"
+                android:id="@+id/videoPreviewImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY" />
