--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -410,7 +410,7 @@
             android:orientation="horizontal">
 
             <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
-                android:id="@+id/previewSeekBar"
+                android:id="@+id/exo_progress"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
