--- a/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
@@ -56,14 +56,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@id/exo_play"
+                    android:id="@+id/videoPlay"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_balaji_pause" />
 
                 <ImageView
-                    android:id="@id/exo_pause"
+                    android:id="@+id/videoPause"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:visibility="gone"
