--- a/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_no_controller_video_player_layout.xml
@@ -11,6 +11,7 @@
         android:id="@+id/videoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:use_controller="false"
         app:resize_mode="fill" />
 
 
