--- a/app/src/main/res/layout/banner_video_payer_controller_layout.xml
+++ b/app/src/main/res/layout/banner_video_payer_controller_layout.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/videoPlayerControllerRealtiveLayout"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="match_parent"
     android:layout_gravity="bottom"
     android:layoutDirection="ltr">
 
