--- a/app/src/main/res/layout/banner_video_player.xml
+++ b/app/src/main/res/layout/banner_video_player.xml
@@ -59,7 +59,7 @@
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_balaji_pause"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <ImageView
                     android:id="@+id/exo_pause"
