--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -266,7 +266,7 @@
 
 
             <ImageView
-                android:id="@+id/volumeUpDownBUtton"
+                android:id="@+id/volumeFullScreenButton"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
